--- a/assets/style.css
+++ b/assets/style.css
@@ -8,12 +8,13 @@
 
 header {
     background-color: var(--gray);
-    height: 10vh;
+    height:15vh;
     width: 100%;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
+    
 }
 header h1 {
     background-color: var(--accent);
@@ -34,25 +35,33 @@ var(--accent);
     color: whitesmoke;
 }
 
-nav a {
-    font-size: 2.5vh;;
-    text-decoration: underline var(--accent) 5px;
-    color: black;
-    padding: 10px;
-
-}
-nav a:hover {
-    background-color: var(--accent);
-}
 nav ul {
     /* border: solid black 1px; */
     height: 100%;
-    Width: 50vw;
+    Width: 100%;
     display: flex;
-    flex-wrap: wrap;
     flex: 1 1 50vh;
+    padding-right: 20px;
     justify-content: space-evenly;
 }
+
+nav a {
+    font-size: 2.5vh;;
+    text-decoration: underline var(--accent);
+    color: black;
+    padding: 10px;
+    background-image: linear-gradient(to top, var(--accent) 50%, var(--gray) 50%);
+    background-position: 1% 0%;
+    background-size: 200% auto;
+    transition: background-position 0.5s ease-out;
+    
+}
+nav a:hover {
+    background-color: var(--accent);
+    background-position: 0% 99.99% ;
+    font-size: 2.6vh;
+}
+
 .mainImage {
     height: 10vh;
     width: 100%;
@@ -72,7 +81,7 @@ nav ul {
 
 .mainImage h1:hover {
     box-shadow: inset 0px 0px 8px
-var(--accent), 0 0 30px
+var(--accent), 0 0 16px
 var(--accent);
     color: whitesmoke;
 }
@@ -82,15 +91,38 @@ var(--accent);
     max-height: 20vh;
 }
 
-@media screen and (max-width: 440px) {
-    header {
-        flex-direction: column;
-        align-content: center;
-    }
-    nav {
+@media screen and (max-width: 768px) {
+    header, nav ul {
         flex-flow: column wrap;
+        text-align: center;
+        height: max-content;
+        
     }
     header h1 {
         padding: 10px;
+        margin-bottom: 10px;
     }
+    nav ul {
+        padding-right: 0;
+    }
+
+    nav {
+        /* border: solid whitesmoke 2px; */
+        width: 100%;
+        
+    }
+    nav li {
+        
+        border: solid whitesmoke 2px;
+        width: 100%;
+        margin: 15px 0;
+        
+    }
+    nav li:hover {
+        box-shadow: inset 0px 0px 6px
+    whitesmoke, 0 0 10px
+    whitesmoke;
+        
+    }
+    
 }
