--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
 
 header {
     background-color: var(--gray);
-    height:15vh;
+    height:10vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -19,13 +19,9 @@ header {
 header h1 {
     background-color: var(--accent);
     padding: 1vh 2vw 1vh 5vw;
-    font-size: 3.75vh;
+    font-size: 30px;
     font-style: italic;
-    flex-grow: 1;
-}
-header h1 {
-    transition: all 0.5s ease-in-
-out;
+    border-radius: 0 10px 10px 0;
 }
 
 header h1:hover {
@@ -41,25 +37,28 @@ nav ul {
     Width: 100%;
     display: flex;
     flex: 1 1 50vh;
-    padding-right: 20px;
-    justify-content: space-evenly;
+    padding-right: 50px;
 }
 
+nav li {
+    margin: 0 10px;
+}
 nav a {
-    font-size: 2.5vh;;
-    text-decoration: underline var(--accent);
+    font-size: 20px;
+    text-decoration: none;
     color: black;
-    padding: 10px;
+    padding: 10px 10px 10px 10px;
     background-image: linear-gradient(to top, var(--accent) 50%, var(--gray) 50%);
-    background-position: 1% 0%;
+    background-position: 1% 10%;
     background-size: 200% auto;
-    transition: background-position 0.5s ease-out;
+    
     
 }
 nav a:hover {
     background-color: var(--accent);
+    transition: background-position 0.5s ease-in-out;
     background-position: 0% 99.99% ;
-    font-size: 2.6vh;
+  
 }
 
 .mainImage {
@@ -68,15 +67,18 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-bottom: 100px;
+    margin-bottom: 72px;
 }
 .mainImage h1 {
     position: relative;
     background-color: var(--accent);
     margin-top: -60px;
-    margin-right: 20px;
+    margin-right: 0;
     padding: 10px 10px;
     font-size: large;
+    font-weight: lighter;
+    font-style: italic;
+    border-radius: 10px 0 0 10px;
 }
 
 .mainImage h1:hover {
@@ -91,6 +93,89 @@ var(--accent);
     max-height: 20vh;
 }
 
+main section{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    /* border: solid black 2px; */ 
+    padding-top: 20px;
+    margin: 10px 0px;
+    width: 100vw;
+    background-color: whitesmoke;
+}
+
+.cardHeader {
+    /* border: solid black 2px; */
+    padding: 0;
+    font-size: x-large;
+    width: 35%;
+    align-self: center;
+    text-align: right;
+    position: relative;
+    right: 50px;
+    color: var(--accent);
+    text-shadow: var(--gray) 1px 1px;
+}
+
+.cardInfo {
+    width: 60vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    height: auto;
+}
+
+#work img {
+    border: solid var(--accent) 3px;
+}
+
+#mainWorkCard {
+    /* border: solid black 1px; */
+    width: 100%;
+    height: 100%;
+}
+#mainWorkCard img {
+    width: 100%;
+}
+
+#mainWorkItem {
+    width: 100%;
+}
+.workCard {
+    width: 50%;
+}
+.workItem img {
+    width: 100%;
+    
+}
+.workItem {
+    width: 100%;
+    height: 100%;
+    
+}
+
+.workImageHeader {
+    position: relative;
+    top: -50px;
+    background-color: var(--accent);
+    width: 50%;
+    padding: 5px 5px;
+    border-radius: 0 10px 10px 0;
+}
+
+#contact ul {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-around;
+}
+
+#contact li {
+    width: auto;
+}
+#contact a {
+    text-decoration: none;
+    color: var(--accent);
+}
 @media screen and (max-width: 768px) {
     header, nav ul {
         flex-flow: column wrap;
@@ -101,6 +186,8 @@ var(--accent);
     header h1 {
         padding: 10px;
         margin-bottom: 10px;
+        border-radius: 0 0 10px 10px;
+        font-size: 4vh;
     }
     nav ul {
         padding-right: 0;
@@ -111,18 +198,24 @@ var(--accent);
         width: 100%;
         
     }
+    nav a {
+        font-size: 3vh;
+    }
+    
     nav li {
         
-        border: solid whitesmoke 2px;
+        /* border: solid whitesmoke 2px; */
         width: 100%;
         margin: 15px 0;
         
     }
-    nav li:hover {
+    /* nav li:hover {
         box-shadow: inset 0px 0px 6px
     whitesmoke, 0 0 10px
     whitesmoke;
-        
+    } */
+    .mainImage {
+        align-items: center;
     }
     
 }
