--- a/assets/style.css
+++ b/assets/style.css
@@ -17,12 +17,25 @@ header {
     justify-content: space-between;
     
 }
-header h1 {
+#headerSection {
     background-color: var(--accent);
     padding: 1vh 2vw 1vh 5vw;
     font-size: 30px;
     font-style: italic;
     border-radius: 0 10px 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+/* header h1 {
+    position: relative;
+    top: -10px;
+} */
+header img {
+    height: 40px;
+    width: auto;
+    object-fit: cover;
+    margin-left: 5vw;
 }
 
 header h1:hover {
@@ -128,7 +141,11 @@ main section{
     justify-content: space-around;
 }
 #about {
-    padding: 20px 0;;
+    padding: 20px 0;
+}
+#about .cardInfo {
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 #work img {
@@ -178,11 +195,16 @@ var(--accent);
     position: relative;
     top: -70px;
     background-color: var(--accent);
-    width: 50%;
-    padding: 5px 5px;
+    width: min-content;
+    padding: 5px 15px 5px 10px;
     border-radius: 0 10px 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 1;
 }
-
+.workImageHeader p {
+    width: 100%
+}
 #contact {
     padding-bottom: 30px;
 }
@@ -226,7 +248,7 @@ footer a {
         height: max-content;
         
     }
-    header h1 {
+    #headerSection {
         padding: 10px;
         margin-bottom: 10px;
         border-radius: 0 0 10px 10px;
@@ -277,7 +299,6 @@ footer a {
     main section {
         flex-direction: column;
         justify-content: center;
-        text-align: center;
     }
     .workCard {
         width: 100%;
